--- a/css/style.css
+++ b/css/style.css
@@ -60,26 +60,33 @@ a{
 
 /*Req 5*/
 /*Add selector and rule here*/
+:focus{
+  border: 3px #417243;
+  border-style: dashed;
+}
 
 
-
-td{
-  
+td, tbody th{
+  text-align: center;
+  border-top: 3px solid #000000;
+  padding: 10px 10px 10px 10px;
 }
 
 thead tr{
   background: #7e0825;
-  border-radius: 50px 50px 0px 0px;
 
 }
 
 .colhead{
   color: #FFFFFF;
-  
+  min-width: 125px;
+  padding: 10px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .rowhead{
-
+  border-right: 2px solid #000000;
 }
 
 
@@ -100,23 +107,33 @@ thead tr:last-child th:last-child{
   border-top-right-radius: 50px;
 }
 
-/*Add selectors and rules here
-th:first-of-type {
-  border-top-left-radius: 50px;
-}
-th:last-of-type {
-  border-top-right-radius: 50px;
-}
-tr:last-of-type td:first-of-type {
+tbody tr:last-child th:first-child{
   border-bottom-left-radius: 50px;
 }
-tr:last-of-type td:last-of-type {
-  border-bottom-right-radius: 50px;
-}*/
 
+tbody tr:last-child td:last-child{
+  border-bottom-right-radius: 50px;
+}
+
+/*Add selectors and rules here*/
+tbody tr:nth-child(odd){
+  background: transparent;
+}
+
+tbody tr:nth-child(even){
+  background: #d1d1d1;
+}
+
+tbody tr:hover{
+  background: rgba(126, 8, 37, 0.25);
+}
 
 footer{
   width:100%;
+  min-height: 75px;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background:#000000;
   text-align:center;
   color: #FFFFFF;
