--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ p{
 }
 
 a{
-  color: #c12258;
+  color: #B21F50;
   font-size: 16px;
   text-decoration: underline;
   text-decoration-style: wavy;
@@ -131,6 +131,7 @@ tbody tr:hover{
 footer{
   width:100%;
   min-height: 75px;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
